# RustEmbedPlayground

./: .gdbinit  Makefile  notes.md
src/: main.rs
v1/: Cargo.toml
v1/src/: main.rs
v2/: .gdbinit  Cargo.toml  memory.x
v2/.cargo/: config
v2/src/: main.rs  pwm.rs
