[package]
authors = ["Frans Skarman"]
categories = ["embedded", "no-std"]
description = "A template for building applications for ARM Cortex-M microcontrollers"
keywords = ["arm", "cortex-m", "template"]
license = "MIT OR Apache-2.0"
name = "cortex-m-playground"
repository = "https://github.com/japaric/cortex-m-quickstart"
version = "0.2.1"

[dependencies]
cortex-m-rtfm = "0.2.1"
cortex-m = "0.3.0"
cortex-m-semihosting = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.3"

[dependencies.stm32f30x]
features = ["rt"]
version = "0.5.1"

[profile.release]
debug = true
lto = true
